--- a/termsofservice.html
+++ b/termsofservice.html
@@ -364,6 +364,7 @@
             width: 50px;
             padding: 10px 20px;
             color: white;
+            margin: 0 5px;
         }
         .fa-twitter:hover {
             color: #00aced;
