--- a/termsofservice.html
+++ b/termsofservice.html
@@ -525,7 +525,7 @@
                     </div>
                 </div>
 
-                <div class="row pb-4 up-footer">
+                <!-- <div class="row pb-4 up-footer">
                     <div class="col-lg-4 col-md-12 mb-3">
                         <h4 class="foot mb-4">Ready to take the Leap?</h4>
                         <a href="#" class='foot-btn btn-success px-5 py-2 mb-5'>Start !</a>
@@ -550,6 +550,34 @@
                         <li><a href="help.html">FAQ</a></li>
                         <li><a href="termsOfService.html">Terms of Service</a></li>
                         <li><a href="#">Privacy Policy</a></li>
+                    </div>
+                </div> -->
+                
+                <div class="row pb-4">
+                    <div class="col-lg-4 col-md-12 mb-3">
+                        <h4 class='mb-4'>Ready to take the Leap?</h4>
+                        <a href="register.html" class='btn btn-success px-5 py-2 mb-5'>Start!</a>
+                    </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 my-2">
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="courses.html">Our Course</a></li>
+                        <li><a href="hireGrad.html">Hire a Grad</a></li>
+                    </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 my-2">
+                        <li><a href="curriculum.html">Curriculum</a></li>
+                        <li><a href="blog2.html">Blog</a></li>
+                        <li><a href="blog1.html">Student Stories</a></li>
+
+                    </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 my-2">
+                        <li><a href="search.html">Find a Course</a></li>
+                        <li><a href="#">Our Partners</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
+                    </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 my-2">
+                        <li><a href="help.html">FAQ</a></li>
+                        <li><a href="termsOfService.html">Terms of Service</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     </div>
                 </div>
 
